update openapi, remove parentID from create request, reorder endpoints
